[gd_scene load_steps=8 format=3 uid="uid://cwe1hqepveh8t"]

[ext_resource type="Script" path="res://scripts/tec.gd" id="1_cdnr1"]
[ext_resource type="Script" path="res://scripts/WordInput.gd" id="3_81wib"]

[sub_resource type="Animation" id="Animation_j40od"]
resource_name = "spin"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimationPlayer/Image:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1, 1.5, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.174533, 0.0, -0.174533, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_q8h0e"]
_data = {
"spin": SubResource("Animation_j40od")
}

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ej446"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_vbeph"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1hj36"]
content_margin_left = 5.0
content_margin_right = 5.0
bg_color = Color(0.513726, 0.435294, 0.933333, 1)
border_width_right = 2
border_blend = true
shadow_size = 1

[node name="Main" type="Node2D"]
script = ExtResource("1_cdnr1")

[node name="Container" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 1280.0
offset_bottom = 720.0
metadata/_edit_lock_ = true

[node name="ColorRect" type="ColorRect" parent="Container"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.870588, 0.262745, 0.52549, 1)
metadata/_edit_lock_ = true

[node name="GameContainer" type="Control" parent="Container"]
layout_mode = 1
anchor_left = 0.1625
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true
metadata/_edit_lock_ = true

[node name="CurrentWordField" type="Label" parent="Container/GameContainer"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -67.5
offset_top = 65.0
offset_right = 65.5
offset_bottom = 135.0
grow_horizontal = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 50
text = "VACA"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true
metadata/_edit_lock_ = true

[node name="WordStatus" type="RichTextLabel" parent="Container/GameContainer"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -220.0
offset_right = 220.0
offset_bottom = 57.0
grow_horizontal = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_font_sizes/normal_font_size = 42
theme_override_font_sizes/bold_font_size = 0
bbcode_enabled = true
text = "[wave amp=20.0 freq=10.0 connected=1]palavra com imagem![/wave]"
fit_content = true
scroll_active = false
metadata/_edit_lock_ = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="Container/GameContainer"]
autoplay = "spin"
libraries = {
"": SubResource("AnimationLibrary_q8h0e")
}

[node name="Image" type="Sprite2D" parent="Container/GameContainer/AnimationPlayer"]
unique_name_in_owner = true
position = Vector2(736, 368)

[node name="WordInput" type="LineEdit" parent="Container/GameContainer"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -96.0
offset_top = 600.0
offset_right = 96.0
offset_bottom = 667.0
grow_horizontal = 2
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_selected_color = Color(0, 0, 0, 1)
theme_override_colors/font_uneditable_color = Color(0, 0, 0, 1)
theme_override_colors/font_placeholder_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/caret_color = Color(0, 0, 0, 0.584314)
theme_override_colors/selection_color = Color(0, 0, 0, 0.341176)
theme_override_colors/clear_button_color = Color(0, 0, 0, 1)
theme_override_colors/clear_button_color_pressed = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_constants/caret_width = 1
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxEmpty_ej446")
theme_override_styles/focus = SubResource("StyleBoxEmpty_vbeph")
placeholder_text = "_ _ _ _"
alignment = 1
max_length = 4
expand_to_text_length = true
context_menu_enabled = false
selecting_enabled = false
flat = true
script = ExtResource("3_81wib")
metadata/_edit_lock_ = true

[node name="ItemList" type="ItemList" parent="Container"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 208.0
grow_vertical = 2
focus_mode = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_selected_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 50
theme_override_styles/panel = SubResource("StyleBoxFlat_1hj36")
allow_search = false

[connection signal="text_submitted" from="Container/GameContainer/WordInput" to="Container/GameContainer/WordInput" method="_on_text_submitted"]
[connection signal="valid_word" from="Container/GameContainer/WordInput" to="." method="_on_word_input_valid_word"]
[connection signal="item_clicked" from="Container/ItemList" to="." method="_on_item_list_item_clicked"]
